kubernetes/apps/storage/cloudnative-pg/analyics-worker-three/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-pg-analytics-worker-three
  namespace: storage
  labels:
    citus-cluster: cloudnative-pg-analytics-worker-three
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cloudnative-pg-analytics-worker-three.samcloud.online
    lbipam.cilium.io/ips: 192.168.8.109
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: cloudnative-pg-analytics-worker-three
    role: primary
